--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,16 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://sanjay0701:kWlSJbHUh9v0uvnv@cluster0.mfvmnuu.mongodb.net/
+MONGODB_URI=mongodb+srv://sanjay0701:kWlSJbHUh9v0uvnv@cluster0.mfvmnuu.mongodb.net/collaborative-editor
 
 # Server Configuration
-PORT=3001
-FRONTEND_URL=http://localhost:3000
+PORT=8002
+FRONTEND_URL=http://localhost:8003
 
-# JWT Configuration (for future authentication)
+# JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRES_IN=7d
 
 # Environment
 NODE_ENV=development
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:8003
