--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "module": "src/index.ts",
   "scripts": {
-    "dev": "bun run index.ts",
-    "start": "bun run index.ts",
+    "dev": "bun --watch index.ts",
+    "start": "bun index.ts",
     "build": "bun build index.ts --outdir ./dist",
-    "dev:watch": "bun run --watch index.ts"
+    "dev:watch": "bun --watch index.ts"
   },
   "type": "module",
   "private": true,
@@ -16,15 +16,15 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@elysiajs/cors": "1.1.0",
-    "@elysiajs/websocket": "0.1.0",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "bcryptjs": "^3.0.2",
-    "elysia": "1.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "y-protocols": "^1.0.6",
-    "yjs": "^13.6.27"
+    "@elysiajs/cors": "0.6.0",
+    "@elysiajs/websocket": "0.0.3",
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.6",
+    "bcryptjs": "2.4.3",
+    "elysia": "0.6.20",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.0.0",
+    "y-protocols": "1.0.6",
+    "yjs": "13.6.18"
   }
 }
