--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@types/ws": "^8.18.1",
+    "lucide-react": "^0.536.0",
     "monaco-editor": "^0.52.2",
     "next": "15.4.5",
     "react": "19.1.0",
